k8s-cd/base/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: hoppingmall
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-canary
  namespace: hoppingmall
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8000
      targetPort: 8000
